# auto_img_publisher

./: CMakeLists.txt  package.xml
include/img_publisher/: img_publisher.h
launch/: setup_camera.launch
src/: img_bucket.cpp  img_bucket.h  img_publisher.cpp  img_publisher.h
